ubuntu - 2022-05-19 1.4.200    - download cheltuilei in excel

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
         - ../mysql_database:/var/lib/mysql
   php:    
     container_name: glp_php_apache
-    image: gavriladocker/php:lastapache
+    image: gavriladocker/php:withzip
     #command: ["ls"]
     tty: true
     ports:
